added activities
