# middleware/validation-middleware.js
@@ -18,6 +18,33 @@ const validateTask = async (req, res, next) => {
         }
     }).catch( err => console.log(err))
 }
+
+const validateActivity = async (req, res, next) => {
+    const validationRule = {
+        "activityName": "required|string",
+        "description": "required|string",
+        "startDate": "required|string",
+        "endDate": "required|string",
+        "startTime": "required|string",
+        "endTime": "string",
+        "location": "string",
+    };
+
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    }).catch( err => console.log(err))
+}
+
 module.exports = {
-    validateTask
+    validateTask,
+    validateActivity
 };
